@@ -2,22 +2,22 @@ package su.svn.daybook.services;
 
 import io.quarkus.test.junit.QuarkusMock;
 import io.quarkus.test.junit.QuarkusTest;
+import io.smallrye.mutiny.CompositeException;
 import io.smallrye.mutiny.Multi;
 import io.smallrye.mutiny.Uni;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import su.svn.daybook.DataTest;
 import su.svn.daybook.domain.dao.CodifierDao;
 import su.svn.daybook.domain.messages.Answer;
-import su.svn.daybook.domain.messages.DictionaryResponse;
+import su.svn.daybook.domain.messages.ApiResponse;
 import su.svn.daybook.domain.model.Codifier;
 
 import javax.inject.Inject;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @QuarkusTest
 class CodifierServiceTest {
@@ -27,59 +27,57 @@ class CodifierServiceTest {
 
     static CodifierDao mock;
 
-    static Uni<Optional<Codifier>> optionalUniTest = Uni.createFrom().item(Optional.of(DataTest.OBJECT_Codifier_0));
+    static final Uni<Optional<String>> UNI_OPTIONAL_NONE_STRING = Uni.createFrom().item(Optional.of(Codifier.NONE));
 
-    static Uni<Optional<String>> optionalUniId = Uni.createFrom().item(Optional.of("code"));
+    static final Uni<Optional<Codifier>> UNI_OPTIONAL_TEST = Uni.createFrom().item(Optional.of(DataTest.OBJECT_Codifier_0));
 
-    static Uni<Optional<String>> optionalUniEmptyId = Uni.createFrom().item(Optional.empty());
+    static final Multi<Codifier> MULTI_TEST = Multi.createFrom().item(DataTest.OBJECT_Codifier_0);
 
-    static Multi<Codifier> multiTest = Multi.createFrom().item(DataTest.OBJECT_Codifier_0);
+    static final Multi<Codifier> MULTI_WITH_NULL = DataTest.createMultiWithNull(Codifier.class);
 
-    static Multi<Codifier> multiEmpties = Multi.createFrom().empty();
+    static final Multi<Codifier> MULTI_EMPTIES = DataTest.createMultiEmpties(Codifier.class);
 
-    static Multi<Codifier> multiWithNull = Multi.createFrom().item(() -> null);
-
-    @BeforeAll
-    public static void setup() {
+    @BeforeEach
+    void setUp() {
         mock = Mockito.mock(CodifierDao.class);
-        Mockito.when(mock.findByCode("code")).thenReturn(optionalUniTest);
+        Mockito.when(mock.findById(Codifier.NONE)).thenReturn(UNI_OPTIONAL_TEST);
+        Mockito.when(mock.findByCode(Codifier.NONE)).thenReturn(UNI_OPTIONAL_TEST);
         QuarkusMock.installMockForType(mock, CodifierDao.class);
     }
 
     @Test
-    void testMethod_getAll() {
-        Mockito.when(mock.findAll()).thenReturn(multiTest);
+    void testWhenGetAllThenSingletonList() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_TEST);
         List<Answer> result = service.getAll()
                 .subscribe()
                 .asStream()
-                .peek(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_Codifier_0), actual))
-                .collect(Collectors.toList());
+                .peek(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_Codifier_0), actual)).toList();
         Assertions.assertTrue(result.size() > 0);
     }
 
     @Test
-    void testMethod_getAll_whithEmptyResult() {
-        Mockito.when(mock.findAll()).thenReturn(multiEmpties);
+    void testWhenGetAllThenEmpty() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_EMPTIES);
         List<Answer> result = service.getAll()
                 .subscribe()
                 .asStream()
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(0, result.size());
     }
 
     @Test
-    void testMethod_getAll_whithNullResult() {
-        Mockito.when(mock.findAll()).thenReturn(multiWithNull);
+    void testWhenGetAllThenNull() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_WITH_NULL);
         List<Answer> result = service.getAll()
                 .subscribe()
                 .asStream()
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(0, result.size());
     }
 
     @Test
-    void testMethod_codeGet() {
-        service.codeGet("code")
+    void testWhenGetThenEntry() {
+        service.get(Codifier.NONE)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_Codifier_0), actual))
                 .await()
@@ -87,8 +85,8 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codeGet_whenNullParameter() {
-        service.codeGet(null)
+    void testWhenGetThenNullParameter() {
+        service.get(null)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
@@ -96,10 +94,13 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codeAdd() {
-        var expected = Answer.of(DictionaryResponse.code("code"));
-        Mockito.when(mock.insert(DataTest.OBJECT_Codifier_0)).thenReturn(optionalUniId);
-        service.codeAdd(DataTest.OBJECT_Codifier_0)
+    void testWhenAddThenId() {
+        var expected = Answer.builder()
+                .error(201)
+                .payload(new ApiResponse<>(Codifier.NONE))
+                .build();
+        Mockito.when(mock.insert(DataTest.OBJECT_Codifier_0)).thenReturn(UNI_OPTIONAL_NONE_STRING);
+        service.add(DataTest.OBJECT_Codifier_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
@@ -107,9 +108,9 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codeAdd_whithEmptyResult() {
-        Mockito.when(mock.insert(DataTest.OBJECT_Codifier_0)).thenReturn(optionalUniEmptyId);
-        service.codeAdd(DataTest.OBJECT_Codifier_0)
+    void testWhenAddThenEmpty() {
+        Mockito.when(mock.insert(DataTest.OBJECT_Codifier_0)).thenReturn(DataTest.UNI_OPTIONAL_EMPTY_STRING);
+        service.add(DataTest.OBJECT_Codifier_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
@@ -117,10 +118,13 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codePut() {
-        Mockito.when(mock.update(DataTest.OBJECT_Codifier_0)).thenReturn(optionalUniId);
-        var expected = Answer.of(DictionaryResponse.code("code"));
-        service.codePut(DataTest.OBJECT_Codifier_0)
+    void testWhenPutThenId() {
+        var expected = Answer.builder()
+                .error(202)
+                .payload(new ApiResponse<>(Codifier.NONE))
+                .build();
+        Mockito.when(mock.update(DataTest.OBJECT_Codifier_0)).thenReturn(UNI_OPTIONAL_NONE_STRING);
+        service.put(DataTest.OBJECT_Codifier_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
@@ -128,20 +132,20 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codePut_whithEmptyResult() {
-        Mockito.when(mock.update(DataTest.OBJECT_Codifier_0)).thenReturn(optionalUniEmptyId);
-        service.codePut(DataTest.OBJECT_Codifier_0)
+    void testWhenPutThenEmpty() {
+        Mockito.when(mock.update(DataTest.OBJECT_Codifier_0)).thenReturn(DataTest.UNI_OPTIONAL_EMPTY_STRING);
+        Assertions.assertThrows(CompositeException.class, () -> service.put(DataTest.OBJECT_Codifier_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_codeDelete() {
-        Mockito.when(mock.delete("code")).thenReturn(optionalUniId);
-        var expected = Answer.of(DictionaryResponse.code("code"));
-        service.codeDelete("code")
+    void testWhenDeleteThenId() {
+        Mockito.when(mock.delete(Codifier.NONE)).thenReturn(UNI_OPTIONAL_NONE_STRING);
+        var expected = Answer.of(new ApiResponse<>(Codifier.NONE));
+        service.delete(Codifier.NONE)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
@@ -149,8 +153,8 @@ class CodifierServiceTest {
     }
 
     @Test
-    void testMethod_codeDelete_whenNullParameter() {
-        service.codeDelete(null)
+    void testWhenDeleteThenNullParameter() {
+        service.delete(null)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
